fix : fix light dark switch color setting

--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -73,8 +73,8 @@ $color-success: $color-green-6;
 $color-warning: $color-yellow-6;
 $color-error: $color-red-6;
 
-$color-white: $color-gray-1;
-$color-black: $color-gray-8;
+$color-text-dark: $color-gray-2;
+$color-text-light: $color-gray-7;
 
 // NOTE border radius
 $border-radius-base: 6px;
