--- a/src/layout/Header/index.scss
+++ b/src/layout/Header/index.scss
@@ -1,7 +1,7 @@
 $header-bg-dark: $color-gray-7;
 $header-bg-light: $color-gray-2;
-$header-color-dark: $color-gray-8;
-$header-color-light: $color-gray-2;
+$header-color-dark: $color-text-dark;
+$header-color-light: $color-text-light;
 $header-shadow-dark: 0 0 10px 0 $color-gray-10;
 $header-shadow-light: 0 0 10px 0 $color-gray-4;
 
@@ -11,12 +11,12 @@ $header-padding-x: $gap-base;
 .header {
   &.dark {
     background-color: $header-bg-dark;
-    color: $header-color-light;
+    color: $header-color-dark;
     box-shadow: $header-shadow-dark;
   }
   &.light {
     background-color: $header-bg-light;
-    color: $header-color-dark;
+    color: $header-color-light;
     box-shadow: $header-shadow-light;
   }
   height: $header-height;
