--- a/src/layout/LayoutTemplate/index.scss
+++ b/src/layout/LayoutTemplate/index.scss
@@ -2,6 +2,12 @@
   width: 100vw;
   height: 100vh;
 }
+.main-editor {
+  width: calc(100vw - $layout-editor-width);
+  position: fixed;
+  top: 0;
+  right: 0;
+}
 
 .container-a {
   display: flex;
