--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -26,6 +26,8 @@ $color-gray-10: #141414;
 $color-text-dark: $color-gray-2;
 $color-text-light: $color-gray-7;
 
+$color-editing-border: #3370ff;
+
 // NOTE border radius
 $border-radius-base: 6px;
 $border-radius-sm: 4px;
