--- a/src/components/editor/Dnd/index.scss
+++ b/src/components/editor/Dnd/index.scss
@@ -7,7 +7,7 @@
   cursor: move;
 
   &.active {
-    border: 2px solid $color-editing-border;
+    border: 3px solid var(--npc-primaryColor);
   }
 }
 .dnd-item-drag {
