--- a/src/app/normalize.scss
+++ b/src/app/normalize.scss
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
+.img-box {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -7,10 +17,6 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-
-* {
-  box-sizing: border-box;
-}
 
 html {
   line-height: 1.15; /* 1 */
