--- a/src/layout/Sidebar/index.scss
+++ b/src/layout/Sidebar/index.scss
@@ -1,5 +1,3 @@
-$sidebar-bg-dark: $color-gray-6;
-$sidebar-bg-light: $color-gray-1;
 $sidebar-color-dark: $color-text-dark;
 $sidebar-color-light: $color-text-light;
 $sidebar-menu-bg-dark: $color-gray-5;
@@ -15,11 +13,11 @@ $sidebar-padding-x: $gap-base;
 
 .sidebar {
   &.dark {
-    background-color: $sidebar-bg-dark;
+    background-color: var(--npc-layoutSidebarBgcDark);
     box-shadow: $sidebar-shadow-dark;
   }
   &.light {
-    background-color: $sidebar-bg-light;
+    background-color: var(--npc-layoutSidebarBgcLight);
     box-shadow: $sidebar-shadow-light;
   }
 
